# Projet_GPU

TP2/Particules/fichiers/: CMakeLists.txt  INSTALL
TP2/Particules/fichiers/conf/: 1000_atoms.conf  1024_atoms.conf  128_atoms.conf  16000_atoms.conf  16000_atoms_dim_100.conf  16000_atoms_dim_20.conf  16000_atoms_dim_200.conf  16000_atoms_dim_50.conf  16_atoms.conf  32000_atoms.conf  3_atoms_dim_10.conf  3_atoms_dim_100.conf  3_atoms_dim_12.conf  3_atoms_dim_300.conf  3_atoms_dim_40.conf  3_atoms_dim_400.conf  3_atoms_dim_410.conf  3_atoms_dim_450.conf  3_atoms_dim_500.conf  3_atoms_dim_600.conf  big.conf  biochoc.conf  biochoc0.conf  biochoc1.conf  bounce.conf  boxes_2.conf  choc1.conf  choc2.conf  choc3.conf  choc4.conf  collide.conf  cube1.conf  cube2.conf  default.conf  dense.conf  far_away.conf  generate.c  immob.conf  immob3.conf  immob_y.conf  (+8 more)
TP2/Particules/fichiers/libsotl/: CMakeLists.txt  libsotl-config.in  libsotl.pc.in
TP2/Particules/fichiers/libsotl/include/: atom.h  cl.h  default_defines.h  device.h  domain.h  global_definitions.h  kernel_list.h  ocl.h  ocl_kernels.h  openmp.h  profiling.h  seq.h  shaders.h  sotl.h  sotl_internal.h  util.h  vbo.h  window.h
TP2/Particules/fichiers/libsotl/kernel/: physics.cl
TP2/Particules/fichiers/libsotl/src/: atom.c  device.c  domain.c  global_definitions.c  kernel_list.c  ocl.c  ocl_kernels.c  openmp.c  profiling.c  seq.c  shader.fragment  shader.vertex  shaders.c  sotl.c  util.c  vbo.c  window.c  z-openmp.c
TP2/Particules/fichiers/src/: main.c  tools.c  tools.h
TP3/Courbe/: exemple.gp  exemple1.data  exemple2.data
TP3/TP3/: sujet.tex
TP3/TP3/Fichiers/: Makefile  a.out  depend  depend.c  deux-taches.c  for-en-taches.c  task  task-wait  task-wait.c  task.c  task1
TP4/TP4/: sujet.docx
TP4/TP4/fichiers/: Makefile  bcl-for.sh  prog  speedUp.R
TP4/TP4/fichiers/include/: compute.h  constants.h  debug.h  graphics.h  schedule.h
TP4/TP4/fichiers/src/: compute.c  graphics.c  main.c  schedule.c
TP4/TP4_old/: sujet.docx
TP4/TP4_old/fichiers/: Makefile  prog
TP4/TP4_old/fichiers/include/: compute.h  debug.h  graphics.h  spiral.h
TP4/TP4_old/fichiers/src/: compute.c  graphics.c  main.c  spiral.c
TP5/: Makefile  sujet.aux  sujet.tex
TP5/Fichiers/: Makefile  tsp-main  tsp-main.c
TP6/TP6-OpenCL/fichiers/AddMat/: addmat  addmat.c  addmat.cl  util.c
TP6/TP6-OpenCL/fichiers/Reduction/: vector.c  vector.cl
TP6/TP6-OpenCL/fichiers/Transpose/: Makefile  prog
TP6/TP6-OpenCL/fichiers/Transpose/include/: compute.h  debug.h  draw.h
TP6/TP6-OpenCL/fichiers/Transpose/kernel/: compute.cl
TP6/TP6-OpenCL/fichiers/Transpose/src/: compute.c  draw.c  graphics.c  main.c  ocl.c
TP6/TP6-OpenCL/fichiers/Vector/: Makefile  util.h  vector  vector.cl
TP6/TP6-OpenCL/fichiers/VectorGroupPair/: vector.c  vector.cl
TP6/TP6-OpenCL/fichiers/VectorIeme/: vector.cl
TP6/TP6-OpenCL/fichiers/VectorPair/: vector.cl
fichiers/experiences/: lancer-expe.sh  tracer-speedUp.R
fichiers/include/: constants.h  graphics.h  ocl.h
fichiers/kernel/: compute.cl
fichiers/src/: compute.c  draw.c  graphics.c
